--- a/Projects/WeatherApp/index.html
+++ b/Projects/WeatherApp/index.html
@@ -8,51 +8,53 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="icon" href="icon/cloudy.png">
+    <!--icon-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 
 <body>
-    <section id="weather-container ">
+    <section id="weather-container text-center">
+        <div class="fs-1 fw-bold mt-2 text-center">Weather App</div>
         <div class="form container mt-3 d-flex ">
-            <input type="text" name="input-weather" id="input-weather" class="form-control me-2"
+            <input type="text" name="input-weather" id="input-weather" class="form-control p-3 me-2"
                 placeholder="Search City">
-            <button type="submit" class="btn btn-primary" id="weatherBtn">Get Weather</button>
+            <button type="submit" class="btn btn-primary" id="weatherBtn"><i class="bi bi-search"></i></button>
         </div>
         <div class="weather-data-container container mt-3 p-4">
             <div class="row justify-content-space-between align-items-center">
                 <div class="degrees-data col-md-6 justify-content-space-between ">
                     <div class="place-details px-3">
-                        <div class="fs-3 place-weather">Bacoor</div>
-                        <div class="place-chance text-secondary ">Sunny</div>
+                        <div class="fs-3 place-weather"></div>
+                        <div class="place-description text-secondary"></div>
                     </div>
-                    <div class="fs-1 temperature-header fw-bold px-3">28°</div>
+                    <div class="fs-1 temperature-text fw-bold px-3"></div>
                 </div>
                 <div class="icon image-weather col-md-6 p-2 d-flex justify-content-end">
-                    <img src="icon/sun_3917805.png" alt="weather-icon" class="weather-icon w-50">
                 </div>
-
             </div>
         </div>
         <div class="details-container container text-center mt-3">
-            <div class="row justify-content-between align-items-space-between">
-              <div class="detail detail-1 py-4 col-lg-3 me-2">
-                <div class="icon"><img src="icon/sun_3917805.png" alt="weather-icon" class="w-25"></div>
-                <div class="description mt-2">Precipitation: 50%</div>
-              </div>
-              <div class="detail detail-2 py-4 col-lg-3 me-2">
-                <div class="icon"><img src="icon/thunderstorm_7814309.png" alt="weather-icon" class="w-25"></div>
-                <div class="description mt-2">Humidity: 90%</div>
-              </div>
-              <div class="detail detail-3 py-4 col-lg-3">
-                <div class="icon"><img src="icon/cloudy_1146869.png" alt="weather-icon" class="w-25"></div>
-                <div class="description mt-2"> Wind: 8 km/h</div>
-              </div>
+            <div class="row justify-content-center align-items-space-between">
+                <div class="detail detail-1 py-4 col-lg-4  mb-2 me-2">
+                    <!-- <div class="icon"><img src=" " alt="weather-icon" class="w-25"></div> -->
+                    <div class="description description-1 "></div>
+                </div>
+                <div class="detail detail-2 py-4 col-lg-3  mb-2 me-2">
+                    <!-- <div class="icon"><img src="" alt="weather-icon" class="w-25"></div> -->
+                    <div class="description description-2 "></div>
+                </div>
+                <div class="detail detail-3 py-4 col-lg-4  mb-2">
+                    <!-- <div class="icon"><img src="" alt="weather-icon" class="w-25"></div> -->
+                    <div class="description description-3 "> </div>
+                </div>
             </div>
-          </div>
+        </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-        <script src="script/script.js"></script>
+    <script src="script/script.js"></script>
 </body>
 
 </html>
