--- a/Projects/Random-Quotes/index.html
+++ b/Projects/Random-Quotes/index.html
@@ -6,11 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random Quote</title>
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="styles/dialog.css">
+   
     <link rel="icon" href="icon/quotation.png">
     <script src="https://kit.fontawesome.com/cb37e64477.js" crossorigin="anonymous"></script>
     <!--icon-->
-    
 </head>
 
 <body>
@@ -33,13 +32,15 @@
             </div>
             <div class="button-container">
                 <button id="generateBtn">Generate</button>
+                <button id="textSpeechBtn"><i class="fa-solid fa-volume-high"></i></button>
                 <button id="clipboardBtn"><i class="clipboard fa-regular fa-clipboard"></i></button>
+               
             </div>
         </div>
     </div>
    
     <script type="module" src="script/script.js"></script>
-    <script type="module" src="script/dialog.js"></script>
+
 </body>
 
 </html>
